--- a/main.css
+++ b/main.css
@@ -1,7 +1,119 @@
-body,
-html {
-  /* height:100%; */
-
+body,html {
   margin: 0px;
   padding: 0px;
+  background: lightblue;
 }
+
+#app {
+    width: 100%;
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto;
+    grid-template-areas:
+    "header"
+    "main"
+    "footer";
+}
+
+/*_______________________________________*/
+
+header {
+    grid-area: header;
+    display: flex;
+    justify-content: space-between;
+    background: lightgray;
+}
+
+
+header > nav {
+    margin-right: 50px;
+}
+
+header > h1 {
+    margin-left: 50px;
+}
+
+/*_______________________________________*/
+
+main {
+    display: grid;
+    grid-area: main;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 5px;
+    padding: 5px;
+    background: lightgreen;
+    overflow-x: hidden;
+
+}
+
+main > * {
+  background: lightblue;
+}
+
+
+/*_______________________________________*/
+
+.store-item {
+    display: grid;
+    grid-template-rows: 50% 10% 30% 10%;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
+    "image image image"
+    "title title title"
+    "description description description"
+    "rating price stock";
+    height: 100%;
+    font-size: 1vw;
+}
+
+.store-item p, span {
+    padding: 5px;
+}
+
+.store-item > img {
+    max-height: 100%;
+    max-width: 100%;
+    align-self: center;
+    justify-self: center;
+    grid-area: image;
+}
+
+.store-item > :nth-child(2) {
+    grid-area: title;
+}
+
+.store-item > :nth-child(3) {
+    grid-area: description;
+}
+
+.store-item > :nth-child(4) {
+    grid-area: rating;
+    text-align: center;
+}
+
+.store-item > :nth-child(5) {
+    grid-area: price;
+    text-align: center;
+}
+
+.store-item > :nth-child(6) {
+    grid-area: stock;
+    text-align: center;
+}
+
+
+/*______________________________________*/
+
+
+
+footer {
+    grid-area: footer;
+    background: lightcoral;
+    display: flex
+    justify-content: center;
+}
+
+footer > p {
+  text-align: center;
+}
+
